src/test/resources/parser/valid/list/2d/2dListNum.sbsc
// test a list of lists


a = [1.0, 2.0, 3.0];

b = [4.0, 5.0];


d = [a, b];